--- a/my-context/dockerfile
+++ b/my-context/dockerfile
@@ -1,5 +1,5 @@
-FROM mysql
+FROM mysql:latest
 
-RUN apt-get update -yq && apt-get install htop -yq && apt-get install cron -yq && apt-get install logrotate -yq
+RUN apt-get update -yq && apt-get install htop -yq && apt-get install cron -yq && apt-get install logrotate -yq && apt-get install vim -yq && sudo apt-get install mysql-server -yq
 
-ENV MYSQL_ROOT_PASSWORD password
+ENV TZ Europe/Paris && MYSQL_ROOT_PASSWORD password
