--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,53 @@
 version:  '3.7'
 
 services:
-  mysql:
-    build:
-          context: ./my-context
-          dockerfile: dockerfile
-    environment:
-      MYSQL_ROOT_PASSWORD: password
+  maria-1:
+    image: mariadb:latest
+    ports: 
+      - 3306
+      - 4444
+      - 4567
+      - 4568
+    environment: 
+      - MYSQL_ROOT_PASSWORD=password
+
+    volumes: 
+      - ./maria-1:/var/lib/mysql
+      - ./config/node1.cnf:/etc/mysql/mariadb.conf.d/node1.cnf
+    command: --wsrep-new-cluster
+  
+  maria-2:
+    image: mariadb:latest
+    links: 
+      - maria-1
+    ports: 
+      - 3306
+      - 4444
+      - 4567
+      - 4568
+
+    environment: 
+      - MYSQL_ROOT_PASSWORD=password
+
     volumes:
-      - ./mysql:/var/lib/mysql
-      - ./backups:/backups
+      - ./maria-2:/var/lib/mysql
+      - ./config/node2.cnf:/etc/mysql/mariadb.conf.d/node2.cnf
+
+  
+  maria-3:
+    image: mariadb:latest
+    links: 
+      - maria-1
+    ports: 
+      - 3306
+      - 4444
+      - 4567
+      - 4568
+
+    environment: 
+      - MYSQL_ROOT_PASSWORD=password
+
+    volumes:
+      - ./maria-3:/var/lib/mysql
+      - ./config/node3.cnf:/etc/mysql/mariadb.conf.d/node3.cnf
+  
