--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,53 +1,31 @@
-version:  '3.7'
+version: "3.8"
 
 services:
-  maria-1:
-    image: mariadb:latest
-    ports: 
-      - 3306
-      - 4444
-      - 4567
-      - 4568
-    environment: 
-      - MYSQL_ROOT_PASSWORD=password
-
-    volumes: 
-      - ./maria-1:/var/lib/mysql
-      - ./config/node1.cnf:/etc/mysql/mariadb.conf.d/node1.cnf
-    command: --wsrep-new-cluster
-  
-  maria-2:
-    image: mariadb:latest
-    links: 
-      - maria-1
-    ports: 
-      - 3306
-      - 4444
-      - 4567
-      - 4568
-
-    environment: 
-      - MYSQL_ROOT_PASSWORD=password
-
-    volumes:
-      - ./maria-2:/var/lib/mysql
-      - ./config/node2.cnf:/etc/mysql/mariadb.conf.d/node2.cnf
-
-  
-  maria-3:
-    image: mariadb:latest
-    links: 
-      - maria-1
-    ports: 
-      - 3306
-      - 4444
-      - 4567
-      - 4568
-
-    environment: 
-      - MYSQL_ROOT_PASSWORD=password
-
-    volumes:
-      - ./maria-3:/var/lib/mysql
-      - ./config/node3.cnf:/etc/mysql/mariadb.conf.d/node3.cnf
-  
+    mariadb:
+        image: mariadb:latest
+        hostname: mariadb
+        ports:
+            - 3306:3306
+        environment:
+            MYSQL_ROOT_PASSWORD: password
+        volumes:
+            - ./mariadb:/var/lib/mysql
+            - ./scripts:/docker-entrypoint-initdb.d
+    prometheus:
+        image: prom/prometheus:latest
+        hostname: prometheus
+        depends_on:
+            - mysqld-exporter
+        ports:
+            - 9090:9090
+        volumes:
+            - ./config/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    mysqld-exporter:
+        image: prom/mysqld-exporter:latest
+        hostname: mysqld-exporter
+        depends_on:
+            - mariadb
+        ports:
+            - 9104:9104
+        environment:
+            DATA_SOURCE_NAME: "root:password@(mariadb:3306)/test"
